<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingDefaultResource">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@mipmap/home"
            />
        <item android:id="@+id/announcements"
            android:title="@string/announcement"
            android:icon="@mipmap/announcement"/>
        <item android:id="@+id/diningHall"
            android:title="@string/diningHall"
            android:icon="@mipmap/food"/>
        <item android:id="@+id/firebase"
            android:title="Etkinlikler"
            android:icon="@mipmap/ic_link_black_24dp"/>
        <item android:id="@+id/calendar"
            android:title="@string/calendar"
            android:icon="@mipmap/ic_perm_contact_calendar_black_24dp"/>
        <item android:id="@+id/radio"
            android:title="@string/radio"
            android:icon="@mipmap/ic_radio_black_24dp"/>
    </group>

</menu>