<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="menuFragments.Home"
    android:id="@+id/login_fragment_home"
    android:background="@mipmap/home_background"
    >
    <RelativeLayout
        android:id="@+id/login_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:background="#50ffffff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_linear"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:src="@mipmap/gtu_logo"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:id="@+id/login_just_logo"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="25dp"
                />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/login_scroll_view"
            android:layout_gravity="center"
            android:layout_below="@+id/image_linear"
            >

            <LinearLayout
                android:id="@+id/login_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/trans_white_rectangle"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/bilgiSistem"
                    android:textColor="@color/mainColor"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:paddingTop="20dp"
                    />
                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/hosgeldiniz"
                    android:textColor="@color/mainColor"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    />-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <AutoCompleteTextView
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="40dp"
                        android:hint="@string/email"
                        android:background="@drawable/rounded_white_left"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="0dp"
                        android:textSize="15sp"
                        android:drawableStart="@mipmap/ic_account_circle_black_24dp"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry"
                        android:id="@+id/userEmail"

                        />
                    <AutoCompleteTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:hint="@string/gtumail"
                        android:background="@drawable/rounded_white_right"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="15dp"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry"
                        android:id="@+id/userEmailGtu"
                        android:clickable="false"
                        android:textColorHint="@color/mainColor"

                        />

                </LinearLayout>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/pass"
                    android:background="@drawable/rounded_white"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textSize="15sp"
                    android:drawableStart="@mipmap/ic_pass_black_24dp"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry"
                    android:id="@+id/userPass"
                    android:inputType="textPassword"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/remember"
                    android:textColor="@color/mainColor"
                    android:id="@+id/login_check_box"
                    android:textSize="18sp"
                    android:buttonTint="@color/mainColor"
                    />
                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/wrong_login"
                    android:text="@string/wrong"
                    android:textAlignment="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/wrongTextView"
                    />
                <Button
                    android:id="@+id/home_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:background="@drawable/login_button_first"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>