<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/s_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_of_registration_1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_custom"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/date_of_registration"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_of_registration_2"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/date_of_registration_1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/date_of_registration_1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/mainColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/approval_date_1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_of_registration_1"
            android:background="@drawable/text_view_custom"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/approval_registration"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/approval_date_2"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/approval_date_1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/approval_date_1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/mainColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/approval_status_1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/approval_date_1"
            android:background="@drawable/text_view_custom"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/approval_status"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/approval_status_2"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/approval_status_1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/approval_status_1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/mainColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/explanation_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/approval_status_1"
            android:background="@drawable/text_view_custom"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/explanation"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/explanation_2"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/explanation_1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/mainColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/advisor"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/explanation_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-2dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/advisor"
            android:textColor="@color/mainColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/advisor"
            android:weightSum="2"
            android:id="@+id/l_spinner"
            >
            <Spinner
                android:id="@+id/s_years"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                >

            </Spinner>
            <Spinner
                android:id="@+id/s_terms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                >

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/s_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/l_spinner"
            android:weightSum="1"
            >

        </LinearLayout>
    </RelativeLayout>
</ScrollView>