<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="menuFragments.Home"
    android:id="@+id/login_fragment_home_2"
    android:background="@mipmap/home_background"
    >
    <RelativeLayout
        android:id="@+id/login_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50ffffff"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_linear"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:layout_marginTop="66dp"
                android:background="@mipmap/gtu_logo"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:id="@+id/login_just_logo"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="25dp"
                />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/login_scroll_view"
            android:layout_gravity="center"
            android:layout_below="@+id/image_linear"
            >

            <LinearLayout
                android:id="@+id/login_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/trans_white_rectangle"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/bilgiSistem"
                    android:textColor="@color/mainColor"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:paddingTop="50dp"
                    />
                <TextView
                    android:id="@+id/student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text=""
                    android:textColor="@color/mainColor"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:paddingTop="25dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    >

                    <Button
                        android:id="@+id/home_login_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/mainColor"
                        android:textStyle="normal"
                        android:background="@drawable/login_button"
                        android:text="@string/login"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"

                        />
                    <Button
                        android:id="@+id/home_exit_button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/mainColor"
                        android:textStyle="normal"
                        android:background="@drawable/exit_button"
                        android:text="@string/exit"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>